--- a/Resnet_stuff.ipynb
+++ b/Resnet_stuff.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -208,80 +208,46 @@
      "output_type": "stream",
      "text": [
       "Train on 14478 samples, validate on 2556 samples\n",
-      "Epoch 1/20\n",
-      "14478/14478 [==============================] - 42s 3ms/step - loss: 0.3870 - acc: 0.8858 - val_loss: 0.2727 - val_acc: 0.9194\n",
-      "Epoch 2/20\n",
-      "14478/14478 [==============================] - 31s 2ms/step - loss: 0.2380 - acc: 0.9239 - val_loss: 0.2490 - val_acc: 0.9174\n",
-      "Epoch 3/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2268 - acc: 0.9276 - val_loss: 0.2407 - val_acc: 0.9198\n",
-      "Epoch 4/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2339 - acc: 0.9221 - val_loss: 0.2767 - val_acc: 0.9053\n",
-      "Epoch 5/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2388 - acc: 0.9237 - val_loss: 0.2419 - val_acc: 0.9206\n",
-      "Epoch 6/20\n",
-      "14478/14478 [==============================] - 31s 2ms/step - loss: 0.2264 - acc: 0.9309 - val_loss: 0.2707 - val_acc: 0.9100\n",
-      "Epoch 7/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2338 - acc: 0.9279 - val_loss: 0.2825 - val_acc: 0.9034\n",
-      "Epoch 8/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2423 - acc: 0.9244 - val_loss: 0.2701 - val_acc: 0.9096\n",
-      "Epoch 9/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2886 - acc: 0.9063 - val_loss: 0.3380 - val_acc: 0.8775\n",
-      "Epoch 10/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2590 - acc: 0.9203 - val_loss: 0.2686 - val_acc: 0.9128\n",
-      "Epoch 11/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2774 - acc: 0.9081 - val_loss: 0.3120 - val_acc: 0.8877\n",
-      "Epoch 12/20\n",
-      "14478/14478 [==============================] - 31s 2ms/step - loss: 0.2499 - acc: 0.9164 - val_loss: 0.2884 - val_acc: 0.9061\n",
-      "Epoch 13/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2424 - acc: 0.9255 - val_loss: 0.3342 - val_acc: 0.8924\n",
-      "Epoch 14/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2773 - acc: 0.9123 - val_loss: 0.3340 - val_acc: 0.8889\n",
-      "Epoch 15/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2560 - acc: 0.9170 - val_loss: 0.2901 - val_acc: 0.9014\n",
-      "Epoch 16/20\n",
-      "14478/14478 [==============================] - 31s 2ms/step - loss: 0.2103 - acc: 0.9320 - val_loss: 0.2690 - val_acc: 0.9206\n",
-      "Epoch 17/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2320 - acc: 0.9247 - val_loss: 0.2684 - val_acc: 0.9085\n",
-      "Epoch 18/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2495 - acc: 0.9205 - val_loss: 0.3108 - val_acc: 0.8924\n",
-      "Epoch 19/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2471 - acc: 0.9182 - val_loss: 0.2751 - val_acc: 0.9108\n",
-      "Epoch 20/20\n",
-      "14478/14478 [==============================] - 30s 2ms/step - loss: 0.2380 - acc: 0.9236 - val_loss: 0.3239 - val_acc: 0.8928\n"
+      "Epoch 1/5\n",
+      "14478/14478 [==============================] - 21s 1ms/step - loss: 0.3600 - acc: 0.8829 - val_loss: 0.2430 - val_acc: 0.9178\n",
+      "Epoch 2/5\n",
+      "14478/14478 [==============================] - 19s 1ms/step - loss: 0.1667 - acc: 0.9463 - val_loss: 0.2136 - val_acc: 0.9268\n",
+      "Epoch 3/5\n",
+      "14478/14478 [==============================] - 19s 1ms/step - loss: 0.1084 - acc: 0.9673 - val_loss: 0.2254 - val_acc: 0.9186\n",
+      "Epoch 4/5\n",
+      "14478/14478 [==============================] - 18s 1ms/step - loss: 0.0723 - acc: 0.9786 - val_loss: 0.2292 - val_acc: 0.9225\n",
+      "Epoch 5/5\n",
+      " 7936/14478 [===============>..............] - ETA: 7s - loss: 0.0477 - acc: 0.9888"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x1f175adb390>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "from keras.layers import Dense, Activation\n",
+    "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D\n",
+    "from keras.optimizers import RMSprop\n",
+    "\n",
     "model=Sequential()\n",
     "\n",
-    "model.add(Dense(1000, input_dim=100352, activation='relu',kernel_initializer='uniform'))\n",
+    "model.add(Dense(512, input_dim=100352, activation='relu',kernel_initializer='uniform'))\n",
+    "keras.layers.core.Dropout(0.1, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(512,input_dim=512,activation='relu'))\n",
+    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(256,input_dim=512,activation='relu'))\n",
     "keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
     "\n",
-    "model.add(Dense(500,input_dim=1000,activation='relu'))\n",
-    "keras.layers.core.Dropout(0.4, noise_shape=None, seed=None)\n",
-    "\n",
-    "model.add(Dense(150,input_dim=500,activation='sigmoid'))\n",
+    "model.add(Dense(128,input_dim=256,activation='sigmoid'))\n",
     "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
     "\n",
     "model.add(Dense(units=6))\n",
     "model.add(Activation('softmax'))\n",
     "\n",
-    "model.compile(loss='categorical_crossentropy', optimizer=\"adam\", metrics=['accuracy'])\n",
+    "model.compile(loss='categorical_crossentropy', optimizer=\"sgd\", metrics=['accuracy'])\n",
     "\n",
     "# fitting the model \n",
     "\n",
-    "model.fit(X_train, Y_train, epochs=20, batch_size=30,validation_data=(X_valid,Y_valid))"
+    "model.fit(X_train, Y_train, epochs=5, batch_size=16,validation_data=(X_valid,Y_valid))"
    ]
   },
   {
