added : second model

--- a/Resnet_stuff.ipynb
+++ b/Resnet_stuff.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -217,8 +217,18 @@
       "Epoch 4/5\n",
       "14478/14478 [==============================] - 18s 1ms/step - loss: 0.0723 - acc: 0.9786 - val_loss: 0.2292 - val_acc: 0.9225\n",
       "Epoch 5/5\n",
-      " 7936/14478 [===============>..............] - ETA: 7s - loss: 0.0477 - acc: 0.9888"
+      "14478/14478 [==============================] - 18s 1ms/step - loss: 0.0468 - acc: 0.9885 - val_loss: 0.2721 - val_acc: 0.9108\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1f17984b668>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -252,11 +262,425 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "validation_x=features_test.reshape(7301,100352)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = model.predict(validation_x, batch_size=30)\n",
+    "class_labels = np.argmax(classes, axis=1)\n",
+    "class_labels_dt=pd.DataFrame(class_labels)\n",
+    "class_labels_dt.columns=['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label\n",
+       "0      5\n",
+       "1      0\n",
+       "2      4\n",
+       "3      3\n",
+       "4      5"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_labels_dt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames=[test,class_labels_dt]\n",
+    "result = pd.concat(frames,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_name</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.jpg</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.jpg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6.jpg</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11.jpg</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14.jpg</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  image_name  label\n",
+       "0      3.jpg      5\n",
+       "1      5.jpg      0\n",
+       "2      6.jpg      4\n",
+       "3     11.jpg      3\n",
+       "4     14.jpg      5"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.to_csv('resnet15_15_5.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
+    "model_name = 'trained_resnet50_model_15.h5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_resnet50_model_15.h5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "if not os.path.isdir(save_dir):\n",
+    "    os.makedirs(save_dir)\n",
+    "model_path = os.path.join(save_dir, model_name)\n",
+    "model.save(model_path)\n",
+    "print('Saved trained model at %s ' % model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.applications import InceptionV3\n",
+    "from keras.applications import Xception # TensorFlow ONLY\n",
+    "from keras.applications import VGG16\n",
+    "from keras.applications import VGG19\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train=pd.read_csv('train-scene/train.csv')\n",
+    "test=pd.read_csv('test.csv')\n",
+    "image_path='train-scene/train/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.misc import imresize\n",
+    "from keras.preprocessing.image import load_img\n",
+    "train_img=[]\n",
+    "for i in range(len(train)):\n",
+    "    temp_img=load_img(image_path+train['image_name'][i],target_size=(224,224))\n",
+    "    temp_img=image.img_to_array(temp_img)\n",
+    "    train_img.append(temp_img)\n",
+    "    \n",
+    "train_img=np.array(train_img)\n",
+    "train_img=preprocess_input(train_img)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_img=[]\n",
+    "for i in range(len(test)):\n",
+    "    temp_img=image.load_img(image_path+test['image_name'][i],target_size=(224,224))\n",
+    "    temp_img=image.img_to_array(temp_img)\n",
+    "    test_img.append(temp_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_img=np.array(test_img)\n",
+    "test_img=preprocess_input(test_img)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_weights = 'vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5'\n",
+    "vgg19_weights = 'vgg19_weights_tf_dim_ordering_tf_kernels_notop.h5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1 = VGG16(weights=vgg16_weights, include_top=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_train=model1.predict(train_img)\n",
+    "features_test=model1.predict(test_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x=features_train.reshape(17034,25088)\n",
+    "train_y=np.asarray(train['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_y=np.asarray(train['label'])\n",
+    "# performing one-hot encoding for the target variable\n",
+    "\n",
+    "train_y=pd.get_dummies(train_y)\n",
+    "train_y=np.array(train_y)\n",
+    "# creating training and validation set\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_valid, Y_train, Y_valid=train_test_split(train_x,train_y,test_size=0.15, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 14478 samples, validate on 2556 samples\n",
+      "Epoch 1/10\n",
+      "14478/14478 [==============================] - 8s 576us/step - loss: 0.3883 - acc: 0.8742 - val_loss: 0.2827 - val_acc: 0.8979\n",
+      "Epoch 2/10\n",
+      "14478/14478 [==============================] - 7s 451us/step - loss: 0.2023 - acc: 0.9327 - val_loss: 0.2388 - val_acc: 0.9151\n",
+      "Epoch 3/10\n",
+      "14478/14478 [==============================] - 6s 440us/step - loss: 0.1520 - acc: 0.9511 - val_loss: 0.2325 - val_acc: 0.9167\n",
+      "Epoch 4/10\n",
+      "14478/14478 [==============================] - 6s 440us/step - loss: 0.1132 - acc: 0.9642 - val_loss: 0.2418 - val_acc: 0.9190\n",
+      "Epoch 5/10\n",
+      "14478/14478 [==============================] - 6s 440us/step - loss: 0.0805 - acc: 0.9755 - val_loss: 0.2561 - val_acc: 0.9163\n",
+      "Epoch 6/10\n",
+      "14478/14478 [==============================] - 7s 452us/step - loss: 0.0553 - acc: 0.9852 - val_loss: 0.2830 - val_acc: 0.9147\n",
+      "Epoch 7/10\n",
+      "14478/14478 [==============================] - 7s 477us/step - loss: 0.0366 - acc: 0.9911 - val_loss: 0.2871 - val_acc: 0.9131\n",
+      "Epoch 8/10\n",
+      "14478/14478 [==============================] - 7s 463us/step - loss: 0.0251 - acc: 0.9939 - val_loss: 0.3228 - val_acc: 0.9057\n",
+      "Epoch 9/10\n",
+      "14478/14478 [==============================] - 7s 466us/step - loss: 0.0163 - acc: 0.9961 - val_loss: 0.3235 - val_acc: 0.9139\n",
+      "Epoch 10/10\n",
+      "14478/14478 [==============================] - 7s 467us/step - loss: 0.0091 - acc: 0.9985 - val_loss: 0.3411 - val_acc: 0.9104\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x24092436dd8>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from keras.layers import Dense, Activation\n",
+    "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D\n",
+    "from keras.optimizers import RMSprop\n",
+    "\n",
+    "model=Sequential()\n",
+    "\n",
+    "model.add(Dense(512, input_dim=25088, activation='relu',kernel_initializer='uniform'))\n",
+    "keras.layers.core.Dropout(0.1, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(512,input_dim=512,activation='relu'))\n",
+    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(256,input_dim=512,activation='relu'))\n",
+    "keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(128,input_dim=256,activation='sigmoid'))\n",
+    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(units=6))\n",
+    "model.add(Activation('softmax'))\n",
+    "\n",
+    "model.compile(loss='categorical_crossentropy', optimizer=\"sgd\", metrics=['accuracy'])\n",
+    "\n",
+    "# fitting the model \n",
+    "\n",
+    "model.fit(X_train, Y_train, epochs=10, batch_size=16,validation_data=(X_valid,Y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_x=features_test.reshape(7301,25088)"
    ]
   },
   {
@@ -315,7 +739,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -330,7 +754,7 @@
        "0      5\n",
        "1      0\n",
        "2      4\n",
-       "3      4\n",
+       "3      2\n",
        "4      5"
       ]
      },
@@ -345,17 +769,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames=[test,class_labels_dt]\n",
-    "result = pd.concat(frames,axis=1)"
+    "frames1=[test,class_labels_dt]\n",
+    "result1 = pd.concat(frames1,axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +826,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>11.jpg</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -418,26 +842,17 @@
        "0      3.jpg      5\n",
        "1      5.jpg      0\n",
        "2      6.jpg      4\n",
-       "3     11.jpg      4\n",
+       "3     11.jpg      2\n",
        "4     14.jpg      5"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result.to_csv('resnet50_15.csv')"
+    "result1.head()\n"
    ]
   },
   {
@@ -446,20 +861,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
-    "model_name = 'trained_resnet50_model_15.h5'"
+    "result1.to_csv('vgg16_15_5.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
+    "model_name = 'trained_vgg16_model_15.h5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_resnet50_model_15.h5 \n"
+      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_vgg16_model_15.h5 \n"
      ]
     }
    ],
