--- a/Resnet_stuff.ipynb
+++ b/Resnet_stuff.ipynb
@@ -897,6 +897,438 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train=pd.read_csv('train-scene/train.csv')\n",
+    "test=pd.read_csv('test.csv')\n",
+    "image_path='train-scene/train/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.misc import imresize\n",
+    "from keras.preprocessing.image import load_img\n",
+    "train_img=[]\n",
+    "for i in range(len(train)):\n",
+    "    temp_img=load_img(image_path+train['image_name'][i],target_size=(224,224))\n",
+    "    temp_img=image.img_to_array(temp_img)\n",
+    "    train_img.append(temp_img)\n",
+    "    \n",
+    "train_img=np.array(train_img)\n",
+    "train_img=preprocess_input(train_img)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_img=[]\n",
+    "for i in range(len(test)):\n",
+    "    temp_img=image.load_img(image_path+test['image_name'][i],target_size=(224,224))\n",
+    "    temp_img=image.img_to_array(temp_img)\n",
+    "    test_img.append(temp_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_img=np.array(test_img)\n",
+    "test_img=preprocess_input(test_img)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_weights = 'vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5'\n",
+    "vgg19_weights = 'vgg19_weights_tf_dim_ordering_tf_kernels_notop.h5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1 = VGG19(weights=vgg19_weights, include_top=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_train=model1.predict(train_img)\n",
+    "features_test=model1.predict(test_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x=features_train.reshape(17034,25088)\n",
+    "train_y=np.asarray(train['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_y=np.asarray(train['label'])\n",
+    "# performing one-hot encoding for the target variable\n",
+    "\n",
+    "train_y=pd.get_dummies(train_y)\n",
+    "train_y=np.array(train_y)\n",
+    "# creating training and validation set\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_valid, Y_train, Y_valid=train_test_split(train_x,train_y,test_size=0.15, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 14478 samples, validate on 2556 samples\n",
+      "Epoch 1/25\n",
+      "14478/14478 [==============================] - 7s 517us/step - loss: 0.4041 - acc: 0.8659 - val_loss: 0.2782 - val_acc: 0.8998\n",
+      "Epoch 2/25\n",
+      "14478/14478 [==============================] - 6s 448us/step - loss: 0.2049 - acc: 0.9291 - val_loss: 0.2762 - val_acc: 0.8955\n",
+      "Epoch 3/25\n",
+      "14478/14478 [==============================] - 6s 444us/step - loss: 0.1491 - acc: 0.9510 - val_loss: 0.2501 - val_acc: 0.9128\n",
+      "Epoch 4/25\n",
+      "14478/14478 [==============================] - 7s 454us/step - loss: 0.1114 - acc: 0.9640 - val_loss: 0.2556 - val_acc: 0.9124\n",
+      "Epoch 5/25\n",
+      "14478/14478 [==============================] - 6s 446us/step - loss: 0.0785 - acc: 0.9771 - val_loss: 0.2698 - val_acc: 0.9120\n",
+      "Epoch 6/25\n",
+      "14478/14478 [==============================] - 7s 465us/step - loss: 0.0573 - acc: 0.9843 - val_loss: 0.2913 - val_acc: 0.9088\n",
+      "Epoch 7/25\n",
+      "14478/14478 [==============================] - 7s 465us/step - loss: 0.0342 - acc: 0.9921 - val_loss: 0.3121 - val_acc: 0.9096\n",
+      "Epoch 8/25\n",
+      "14478/14478 [==============================] - 7s 469us/step - loss: 0.0275 - acc: 0.9936 - val_loss: 0.3356 - val_acc: 0.9112\n",
+      "Epoch 9/25\n",
+      "14478/14478 [==============================] - 7s 476us/step - loss: 0.0175 - acc: 0.9968 - val_loss: 0.3453 - val_acc: 0.9085\n",
+      "Epoch 10/25\n",
+      "14478/14478 [==============================] - 7s 471us/step - loss: 0.0117 - acc: 0.9983 - val_loss: 0.3509 - val_acc: 0.9143\n",
+      "Epoch 11/25\n",
+      "14478/14478 [==============================] - 7s 493us/step - loss: 0.0088 - acc: 0.9987 - val_loss: 0.3606 - val_acc: 0.9159\n",
+      "Epoch 12/25\n",
+      "14478/14478 [==============================] - 7s 480us/step - loss: 0.0077 - acc: 0.9988 - val_loss: 0.3695 - val_acc: 0.9147\n",
+      "Epoch 13/25\n",
+      "14478/14478 [==============================] - 7s 483us/step - loss: 0.0071 - acc: 0.9990 - val_loss: 0.3745 - val_acc: 0.9143\n",
+      "Epoch 14/25\n",
+      "14478/14478 [==============================] - 7s 495us/step - loss: 0.0068 - acc: 0.9990 - val_loss: 0.3800 - val_acc: 0.9147\n",
+      "Epoch 15/25\n",
+      "14478/14478 [==============================] - 7s 503us/step - loss: 0.0065 - acc: 0.9990 - val_loss: 0.3876 - val_acc: 0.9128\n",
+      "Epoch 16/25\n",
+      "14478/14478 [==============================] - 7s 490us/step - loss: 0.0064 - acc: 0.9990 - val_loss: 0.3903 - val_acc: 0.9151\n",
+      "Epoch 17/25\n",
+      "14478/14478 [==============================] - 7s 489us/step - loss: 0.0062 - acc: 0.9990 - val_loss: 0.3909 - val_acc: 0.9151\n",
+      "Epoch 18/25\n",
+      "14478/14478 [==============================] - 7s 501us/step - loss: 0.0059 - acc: 0.9990 - val_loss: 0.4001 - val_acc: 0.9124\n",
+      "Epoch 19/25\n",
+      "14478/14478 [==============================] - 7s 495us/step - loss: 0.0059 - acc: 0.9990 - val_loss: 0.4009 - val_acc: 0.9128\n",
+      "Epoch 20/25\n",
+      "14478/14478 [==============================] - 7s 511us/step - loss: 0.0055 - acc: 0.9990 - val_loss: 0.4075 - val_acc: 0.9135\n",
+      "Epoch 21/25\n",
+      "14478/14478 [==============================] - 7s 506us/step - loss: 0.0058 - acc: 0.9990 - val_loss: 0.4031 - val_acc: 0.9155\n",
+      "Epoch 22/25\n",
+      "14478/14478 [==============================] - 7s 518us/step - loss: 0.0052 - acc: 0.9990 - val_loss: 0.4086 - val_acc: 0.9139\n",
+      "Epoch 23/25\n",
+      "14478/14478 [==============================] - 7s 496us/step - loss: 0.0053 - acc: 0.9990 - val_loss: 0.4038 - val_acc: 0.9163\n",
+      "Epoch 24/25\n",
+      "14478/14478 [==============================] - 8s 522us/step - loss: 0.0050 - acc: 0.9991 - val_loss: 0.4061 - val_acc: 0.9139\n",
+      "Epoch 25/25\n",
+      "14478/14478 [==============================] - 7s 501us/step - loss: 0.0046 - acc: 0.9991 - val_loss: 0.4093 - val_acc: 0.9135\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x240947fe588>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from keras.layers import Dense, Activation\n",
+    "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D\n",
+    "from keras.optimizers import RMSprop\n",
+    "\n",
+    "model=Sequential()\n",
+    "\n",
+    "model.add(Dense(512, input_dim=25088, activation='relu',kernel_initializer='uniform'))\n",
+    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(512,input_dim=512,activation='relu'))\n",
+    "keras.layers.core.Dropout(0.4, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(256,input_dim=512,activation='relu'))\n",
+    "keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(128,input_dim=256,activation='sigmoid'))\n",
+    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(units=6))\n",
+    "model.add(Activation('softmax'))\n",
+    "\n",
+    "model.compile(loss='categorical_crossentropy', optimizer=\"sgd\", metrics=['accuracy'])\n",
+    "\n",
+    "# fitting the model \n",
+    "\n",
+    "model.fit(X_train, Y_train, epochs=25, batch_size=16,validation_data=(X_valid,Y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_x=features_test.reshape(7301,25088)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = model.predict(validation_x, batch_size=30)\n",
+    "class_labels = np.argmax(classes, axis=1)\n",
+    "class_labels_dt=pd.DataFrame(class_labels)\n",
+    "class_labels_dt.columns=['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label\n",
+       "0      5\n",
+       "1      0\n",
+       "2      4\n",
+       "3      2\n",
+       "4      5"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_labels_dt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames2=[test,class_labels_dt]\n",
+    "result2 = pd.concat(frames2,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_name</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.jpg</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.jpg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6.jpg</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11.jpg</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14.jpg</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  image_name  label\n",
+       "0      3.jpg      5\n",
+       "1      5.jpg      0\n",
+       "2      6.jpg      4\n",
+       "3     11.jpg      2\n",
+       "4     14.jpg      5"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result2.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result2.to_csv('vgg19_15_5.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
+    "model_name = 'trained_vgg19_model_15.h5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_vgg16_model_15.h5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "if not os.path.isdir(save_dir):\n",
+    "    os.makedirs(save_dir)\n",
+    "model_path = os.path.join(save_dir, model_name)\n",
+    "model.save(model_path)\n",
+    "print('Saved trained model at %s ' % model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
