--- a/Resnet_stuff.ipynb
+++ b/Resnet_stuff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,15 @@
     "\n",
     "import os\n",
     "import tarfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras_applications.resnext import ResNeXt50"
    ]
   },
   {
@@ -144,6 +153,7 @@
    ],
    "source": [
     "from keras.applications import ResNet50\n",
+    "\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Flatten, GlobalAveragePooling2D\n",
     "from keras.applications.resnet50 import preprocess_input\n",
@@ -1316,6 +1326,448 @@
      "output_type": "stream",
      "text": [
       "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_vgg19_model_15.h5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "if not os.path.isdir(save_dir):\n",
+    "    os.makedirs(save_dir)\n",
+    "model_path = os.path.join(save_dir, model_name)\n",
+    "model.save(model_path)\n",
+    "print('Saved trained model at %s ' % model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train=pd.read_csv('train-scene/train.csv')\n",
+    "test=pd.read_csv('test.csv')\n",
+    "image_path='train-scene/train/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.misc import imresize\n",
+    "from keras.preprocessing.image import load_img\n",
+    "train_img=[]\n",
+    "for i in range(len(train)):\n",
+    "    temp_img=load_img(image_path+train['image_name'][i],target_size=(224,224))\n",
+    "    temp_img=image.img_to_array(temp_img)\n",
+    "    train_img.append(temp_img)\n",
+    "    \n",
+    "train_img=np.array(train_img)\n",
+    "train_img=preprocess_input(train_img)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_img=[]\n",
+    "for i in range(len(test)):\n",
+    "    temp_img=image.load_img(image_path+test['image_name'][i],target_size=(224,224))\n",
+    "    temp_img=image.img_to_array(temp_img)\n",
+    "    test_img.append(temp_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_img=np.array(test_img)\n",
+    "test_img=preprocess_input(test_img)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.applications.densenet import DenseNet121"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://github.com/keras-team/keras-applications/releases/download/densenet/densenet121_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "29089792/29084464 [==============================] - 19s 1us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "model3 = DenseNet121(include_top = False, weights = 'imagenet')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_train=model3.predict(train_img)\n",
+    "features_test=model3.predict(test_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17034, 7, 7, 1024)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x=features_train.reshape(17034,50176)\n",
+    "train_y=np.asarray(train['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_y=np.asarray(train['label'])\n",
+    "# performing one-hot encoding for the target variable\n",
+    "\n",
+    "train_y=pd.get_dummies(train_y)\n",
+    "train_y=np.array(train_y)\n",
+    "# creating training and validation set\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_valid, Y_train, Y_valid=train_test_split(train_x,train_y,test_size=0.15, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 14478 samples, validate on 2556 samples\n",
+      "Epoch 1/16\n",
+      "14478/14478 [==============================] - 16s 1ms/step - loss: 0.8140 - acc: 0.6964 - val_loss: 0.6409 - val_acc: 0.7700\n",
+      "Epoch 2/16\n",
+      "14478/14478 [==============================] - 12s 845us/step - loss: 0.5628 - acc: 0.7958 - val_loss: 0.6026 - val_acc: 0.7786\n",
+      "Epoch 3/16\n",
+      "14478/14478 [==============================] - 13s 868us/step - loss: 0.4904 - acc: 0.8249 - val_loss: 0.5326 - val_acc: 0.8087\n",
+      "Epoch 4/16\n",
+      "14478/14478 [==============================] - 13s 868us/step - loss: 0.4303 - acc: 0.8475 - val_loss: 0.5187 - val_acc: 0.8275\n",
+      "Epoch 5/16\n",
+      "14478/14478 [==============================] - 13s 887us/step - loss: 0.3858 - acc: 0.8623 - val_loss: 0.5470 - val_acc: 0.8005\n",
+      "Epoch 6/16\n",
+      "14478/14478 [==============================] - 13s 916us/step - loss: 0.3520 - acc: 0.8766 - val_loss: 0.4769 - val_acc: 0.8326\n",
+      "Epoch 7/16\n",
+      "14478/14478 [==============================] - 13s 900us/step - loss: 0.3065 - acc: 0.8895 - val_loss: 0.4416 - val_acc: 0.8392\n",
+      "Epoch 8/16\n",
+      "14478/14478 [==============================] - 13s 924us/step - loss: 0.2780 - acc: 0.9029 - val_loss: 0.5069 - val_acc: 0.8298\n",
+      "Epoch 9/16\n",
+      "14478/14478 [==============================] - 14s 944us/step - loss: 0.2478 - acc: 0.9111 - val_loss: 0.4346 - val_acc: 0.8533\n",
+      "Epoch 10/16\n",
+      "14478/14478 [==============================] - 13s 921us/step - loss: 0.2165 - acc: 0.9244 - val_loss: 0.4841 - val_acc: 0.8447\n",
+      "Epoch 11/16\n",
+      "14478/14478 [==============================] - 13s 920us/step - loss: 0.1822 - acc: 0.9374 - val_loss: 0.4851 - val_acc: 0.8384\n",
+      "Epoch 12/16\n",
+      "14478/14478 [==============================] - 13s 912us/step - loss: 0.1532 - acc: 0.9440 - val_loss: 0.4780 - val_acc: 0.8498\n",
+      "Epoch 13/16\n",
+      "14478/14478 [==============================] - 14s 942us/step - loss: 0.1366 - acc: 0.9526 - val_loss: 0.5157 - val_acc: 0.8361\n",
+      "Epoch 14/16\n",
+      "14478/14478 [==============================] - 13s 929us/step - loss: 0.1237 - acc: 0.9575 - val_loss: 0.5655 - val_acc: 0.8286\n",
+      "Epoch 15/16\n",
+      "14478/14478 [==============================] - 14s 947us/step - loss: 0.0975 - acc: 0.9668 - val_loss: 0.5921 - val_acc: 0.8275\n",
+      "Epoch 16/16\n",
+      "14478/14478 [==============================] - 13s 925us/step - loss: 0.0890 - acc: 0.9693 - val_loss: 0.5687 - val_acc: 0.8376\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x242b2f22518>"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from keras.layers import Dense, Activation\n",
+    "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D\n",
+    "from keras.optimizers import RMSprop\n",
+    "\n",
+    "model=Sequential()\n",
+    "\n",
+    "model.add(Dense(512, input_dim=50176, activation='relu',kernel_initializer='uniform'))\n",
+    "keras.layers.core.Dropout(0.1, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(512,input_dim=512,activation='relu'))\n",
+    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(256,input_dim=512,activation='relu'))\n",
+    "keras.layers.core.Dropout(0.3, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(128,input_dim=256,activation='sigmoid'))\n",
+    "keras.layers.core.Dropout(0.2, noise_shape=None, seed=None)\n",
+    "\n",
+    "model.add(Dense(units=6))\n",
+    "model.add(Activation('softmax'))\n",
+    "\n",
+    "model.compile(loss='categorical_crossentropy', optimizer=\"sgd\", metrics=['accuracy'])\n",
+    "\n",
+    "# fitting the model \n",
+    "\n",
+    "model.fit(X_train, Y_train, epochs=16, batch_size=16,validation_data=(X_valid,Y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_x=features_test.reshape(7301,50176)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = model.predict(validation_x, batch_size=30)\n",
+    "class_labels = np.argmax(classes, axis=1)\n",
+    "class_labels_dt=pd.DataFrame(class_labels)\n",
+    "class_labels_dt.columns=['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label\n",
+       "0      5\n",
+       "1      0\n",
+       "2      4\n",
+       "3      2\n",
+       "4      5"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_labels_dt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames1=[test,class_labels_dt]\n",
+    "result1 = pd.concat(frames1,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_name</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.jpg</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.jpg</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6.jpg</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11.jpg</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14.jpg</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  image_name  label\n",
+       "0      3.jpg      5\n",
+       "1      5.jpg      0\n",
+       "2      6.jpg      4\n",
+       "3     11.jpg      2\n",
+       "4     14.jpg      5"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result1.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result1.to_csv('densenet_15.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
+    "model_name = 'trained_densenet_model_15.h5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved trained model at C:\\Users\\rohit\\Desktop\\ML\\Scene_Classification\\saved_models\\trained_densenet_model_15.h5 \n"
      ]
     }
    ],
